--- a/bower.json
+++ b/bower.json
@@ -15,7 +15,7 @@
     "tests"
   ],
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "v4.0.0-alpha.5",
     "font-awesome": "^4.7.0"
   }
 }
