--- a/package.json
+++ b/package.json
@@ -32,8 +32,10 @@
     "gulp-refresh": "^1.1.0",
     "gulp-sass": "^2.3.2",
     "gulp-server-livereload": "^1.9.2",
+    "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^2.2.0",
     "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7"
+    "gulp-util": "^3.0.7",
+    "gulp-webserver": "^0.9.1"
   }
 }
