--- a/Start/53/package.json
+++ b/Start/53/package.json
@@ -2,7 +2,7 @@
   "name": "53",
   "version": "1.0.0",
   "description": "A Vue.js project",
-  "author": "Piotr Palarz <piotr@eduweb.pl>",
+  "author": "gustawdaniel <gustaw.daniel@gmail.com>",
   "private": true,
   "scripts": {
     "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
