--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,9 @@
 language: php
 php:
-- 5.5
-- 5.4
-- hhvm
-script: phpunit test/Test.php
+  - "5.5"
+  - "5.4"
+  - "7.2"
+before_script:
+  - composer install --dev
+script:
+  - vendor/bin/phpunit test/Test.php
