--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "postinstall": "bower install && gulp --production"
+    "postinstall": "bower install"
   },
   "repository": {
     "type": "git",
@@ -19,23 +19,17 @@
   "homepage": "https://github.com/gustawdaniel/javascript_training#readme",
   "devDependencies": {
     "del": "^2.2.2",
-    "gulp": "^3.9.1",
-    "gulp-clean": "^0.3.2",
-    "gulp-clean-css": "^2.0.13",
+    "gulp": "^4.0.2",
+    "gulp-clean-css": "^4.2.0",
     "gulp-concat": "^2.6.0",
     "gulp-connect": "^5.0.0",
-    "gulp-if": "^2.0.1",
-    "gulp-live-server": "0.0.30",
-    "gulp-livereload": "^3.8.1",
-    "gulp-load-plugins": "^1.4.0",
+    "gulp-live-server": "0.0.31",
+    "gulp-livereload": "^4.0.1",
     "gulp-plumber": "^1.1.0",
-    "gulp-refresh": "^1.1.0",
-    "gulp-sass": "^2.3.2",
-    "gulp-server-livereload": "^1.9.2",
-    "gulp-shell": "^0.5.2",
     "gulp-sourcemaps": "^2.2.0",
-    "gulp-uglify": "^2.0.0",
-    "gulp-util": "^3.0.7",
-    "gulp-webserver": "^0.9.1"
+    "gulp-clean": "^0.4.0",
+    "gulp-mode": "^1.0.2",
+    "gulp-sass": "^4.0.2",
+    "gulp-shell": "^0.7.0"
   }
 }
