Mongo instaled in travis, test of mongo api added, php constraint to gt than 7.2

--- a/composer.json
+++ b/composer.json
@@ -12,5 +12,9 @@
             "email": "gustaw.daniel@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "php": ">=7.2",
+        "ext-json": "*",
+        "ext-mongodb": "*"
+    }
 }
