--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,11 @@
 language: php
 php:
-  - "7.1"
   - "7.2"
+  - "7.3"
 before_script:
+  - pecl -q install mongo && echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"
+  - php -m
   - composer install --dev
+  - cd api && php -S localhost:8000 api.php
 script:
-  - vendor/bin/phpunit test/Test.php
+  - vendor/bin/phpunit
