--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,8 @@ language: php
 php:
   - "7.2"
   - "7.3"
+services:
+  - mongodb
 before_script:
 #  - pecl -q install mongo && echo "extension=mongo.so" >> `php --ini | grep "Loaded Configuration" | sed -e "s|.*:\s*||"`
   - pecl install -f mongodb-stable
