--- a/encore/.env
+++ b/encore/.env
@@ -24,7 +24,7 @@ APP_SECRET=96457dc35ef41bcf506c3e2226804b8d
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/the_spacebar
+DATABASE_URL=mysql://daniel:@127.0.0.1:3306/the_spacebar
 ###< doctrine/doctrine-bundle ###
 
 ### CUSTOM VARS
