--- a/package.json
+++ b/package.json
@@ -18,18 +18,17 @@
   },
   "homepage": "https://github.com/gustawdaniel/javascript_training#readme",
   "devDependencies": {
-    "del": "^2.2.2",
+    "del": "^5.0.0",
     "gulp": "^4.0.2",
+    "gulp-clean": "^0.4.0",
     "gulp-clean-css": "^4.2.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-connect": "^5.0.0",
+    "gulp-concat": "^2.6.1",
+    "gulp-connect": "^5.7.0",
     "gulp-live-server": "0.0.31",
     "gulp-livereload": "^4.0.1",
-    "gulp-plumber": "^1.1.0",
-    "gulp-sourcemaps": "^2.2.0",
-    "gulp-clean": "^0.4.0",
     "gulp-mode": "^1.0.2",
-    "gulp-sass": "^4.0.2",
-    "gulp-shell": "^0.7.0"
+    "gulp-plumber": "^1.2.1",
+    "gulp-shell": "^0.7.1",
+    "gulp-sourcemaps": "^2.6.5"
   }
 }
