--- a/package.json
+++ b/package.json
@@ -31,10 +31,10 @@
     "gulp-shell": "^0.7.1",
     "gulp-sourcemaps": "^2.6.5",
     "gulp-sass": "^4.0.2",
-    "webpack-dev-server": "^3.1.11"
+    "webpack-dev-server": "^3.7.2"
   },
   "dependencies": {
-    "bootstrap": "v4.0.0-alpha.5",
+    "bootstrap": "v4.3.1",
     "font-awesome": "^4.7.0",
     "json-server": "^0.15.0"
   }
