--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
   "dependencies": {
     "bootstrap": "v4.3.1",
     "font-awesome": "^4.7.0",
-    "json-server": "^0.15.0"
+    "json-server": "^0.15.0",
+    "prisma-client-lib": "^1.34.3"
   }
 }
